Refactor HTML structure and update logo link

--- a/my-website/index.html
+++ b/my-website/index.html
@@ -13,12 +13,13 @@
 
 <body>
   <div class="navbar">
-    <img src="logo.png" alt="LOGO HERE" />
-    <div class="nav-links">
-      <a href="index.html">Home</a>
-      <input type="text" class="search-bar" placeholder="Search..." onfocus="openSearchModal()" />
-    </div>
+  <a href="index.html" class="logo">MOVIE<span class="logo-accent">FLIXS</span></a>
+  
+  <div class="nav-links">
+    <a href="index.html">Home</a>
+    <input type="text" class="search-bar" placeholder="Search..." onfocus="openSearchModal()" />
   </div>
+</div>
 
   <div class="banner" id="banner">
     <h1 id="banner-title"></h1>
@@ -83,3 +84,4 @@
   
 
 </body>
+
