--- a/my-website/index.html
+++ b/my-website/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <div class="navbar">
- <a href="index.html" class="logo">MOVIE<span class="logo-accent">FLIXS</span></a>
+ <a href="index.html" style="color: #e50914; text-decoration: none; font-size: 30px; font-weight: bold; font-family: 'Arial Black', sans-serif;">MOVIE FLIXS</a>
   
   <div class="nav-links">
     <a href="index.html">Home</a>
@@ -84,5 +84,6 @@
   
 
 </body>
+
 
 
