--- a/my-website/index.html
+++ b/my-website/index.html
@@ -72,7 +72,7 @@
 
 <footer class="footer">
   <div class="footer-content">
-    <p>&copy; 2025 My Website. All rights reserved.</p>
+    <p>&copy; 2026 Movie Flixs. All rights reserved.</p>
     <div class="footer-links">
       <a href="#">Disclaimer</a>
       <a href="#">About Us</a>
@@ -84,6 +84,7 @@
   
 
 </body>
+
 
 
 
