--- a/my-website/index.html
+++ b/my-website/index.html
@@ -13,13 +13,13 @@
 
 <body>
   <div class="navbar">
- <a href="index.html" style="color: #e50914; text-decoration: none; font-size: 30px; font-weight: bold; font-family: 'Arial Black', sans-serif;">MOVIE FLIXS</a>
-  
-  <div class="nav-links">
-    <a href="index.html">Home</a>
-    <input type="text" class="search-bar" placeholder="Search..." onfocus="openSearchModal()" />
+    <a href="index.html" style="color: #e50914; text-decoration: none; font-size: 30px; font-weight: bold; font-family: 'Arial Black', sans-serif;">MOVIE FLIXS</a>
+    
+    <div class="nav-links">
+      <a href="index.html">Home</a>
+      <input type="text" class="search-bar" placeholder="Search..." onfocus="openSearchModal()" />
+    </div>
   </div>
-</div>
 
   <div class="banner" id="banner">
     <h1 id="banner-title"></h1>
@@ -44,13 +44,13 @@
     <div class="modal-content">
       <span class="close" onclick="closeModal()" style="color: red;">&times;</span>
       <div class="modal-body">
-  <img id="modal-image" src="" alt="" />
-  <div class="modal-text">
-    <h2 id="modal-title"></h2>
-    <div class="stars" id="modal-rating"></div>
-    <p id="modal-description"></p>
-  </div>
-</div>
+        <img id="modal-image" src="" alt="" />
+        <div class="modal-text">
+          <h2 id="modal-title"></h2>
+          <div class="stars" id="modal-rating"></div>
+          <p id="modal-description"></p>
+        </div>
+      </div>
       
       <div class="server-selector">
         <label for="server">Change Server:</label>
@@ -70,21 +70,18 @@
     <div class="results" id="search-results"></div>
   </div>
 
-<footer class="footer">
-  <div class="footer-content">
-    <p>&copy; 2026 Movie Flixs. All rights reserved.</p>
-    <div class="footer-links">
-      <a href="#">Disclaimer</a>
-      <a href="#">About Us</a>
-      <a href="#">Contact Us</a>
+  <footer class="footer">
+    <div class="footer-content">
+      <p>&copy; 2026 Movie Flixs. All rights reserved.</p>
+      <div class="footer-links">
+        <a href="#">Disclaimer</a>
+        <a href="#">About Us</a>
+        <a href="#">Contact Us</a>
+      </div>
     </div>
-  </div>
-</footer>
+  </footer>
 
-  
+  <script src="https://pl28493188.effectivegatecpm.com/92/23/d2/9223d2a87051fe5864f28cb6c4bd6616.js"></script>
 
 </body>
-
-
-
-
+</html>
