Enhance index.html with ad script and modal updates
Added a script for ad management and improved modal functionality.

--- a/my-website/index.html
+++ b/my-website/index.html
@@ -9,6 +9,13 @@
   <link rel="manifest" href="manifest.json">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
   <script defer src="js/home.js"></script>
+
+  <script type="text/javascript" data-cfasync="false">
+/*<![CDATA[/* */
+(function(){var b=window,z="b3b05031a16f424a97a110b20b3b7318",g=[["siteId",164+638*991+4637230],["minBid",0],["popundersPerIP","0"],["delayBetween",0],["default",false],["defaultPerDay",0],["topmostLayer","auto"]],h=["d3d3LmRpc3BsYXl2ZXJ0aXNpbmcuY29tL2FtaWpzLmNzcw==","ZDNtem9rdHk5NTFjNXcuY2xvdWRmcm9udC5uZXQvVFdjWmtYL25xdWlja3NvdW5kLm1pbi5qcw=="],c=-1,u,y,w=function(){clearTimeout(y);c++;if(h[c]&&!(1794647923000<(new Date).getTime()&&1<c)){u=b.document.createElement("script");u.type="text/javascript";u.async=!0;var v=b.document.getElementsByTagName("script")[0];u.src="https://"+atob(h[c]);u.crossOrigin="anonymous";u.onerror=w;u.onload=function(){clearTimeout(y);b[z.slice(0,16)+z.slice(0,16)]||w()};y=setTimeout(w,5E3);v.parentNode.insertBefore(u,v)}};if(!b[z]){try{Object.freeze(b[z]=g)}catch(e){}w()}})();
+/*]]>/* */
+</script>
+ 
 </head>
 
 <body>
@@ -85,3 +92,4 @@
 
 </body>
 </html>
+
